simplified make file and directory structure to avoid headaches and heartaches with Yocto

--- a/server/src/Makefile
+++ b/server/src/Makefile
@@ -1,3 +1,7 @@
+IDIR =../include
+ODIR=obj
+LDIR=../lib
+
 #CC = gcc
 #CFLAGS = -I $(IDIR) -Wall -Werror -pthread
 
@@ -5,36 +9,33 @@ ifeq ($(CC),)
 	CC = $(CROSS_COMPILE)gcc
 endif
 ifeq ($(CFLAGS),)
-	CFLAGS = -g -Wall -Werror -pthread
+	CFLAGS = -I $(IDIR) -Wall -Werror
 endif
 ifeq ($(LDFLAGS),)
 	LDFLAGS = -pthread -lrt
 endif
 
-IDIR =../include
-ODIR=obj
-LDIR=../lib
 
+# #set of h files which .c files depend on
+# _DEPS = gpio.h circularbuffer.h
+# DEPS = $(patsubst %,$(IDIR)/%,$(_DEPS))
+#
+# _OBJ = main.o
+# OBJ = $(patsubst %,$(ODIR)/%,$(_OBJ))
 
-#set of h files which .c files depend on
-_DEPS = gpio.h circularbuffer.h
-DEPS = $(patsubst %,$(IDIR)/%,$(_DEPS))
+all: server
 
-_OBJ = main.o
-OBJ = $(patsubst %,$(ODIR)/%,$(_OBJ))
+# # .o file depends on the .c version of the file and the .h files in DEPS
+# # "-c" = generate object files,
+# # "-o $@" = put output of compilation in the file name on the left side of ":"
+# # "$<" = the first item in the dependencies list
+# $(ODIR)/%.o: %.c $(DEPS)
+# 	$(CC) -c -o $@ $< $(CFLAGS)
 
-
-# .o file depends on the .c version of the file and the .h files in DEPS
-# "-c" = generate object files,
-# "-o $@" = put output of compilation in the file name on the left side of ":"
-# "$<" = the first item in the dependencies list
-$(ODIR)/%.o: %.c $(DEPS)
-	$(CC) -c -o $@ $< $(CFLAGS)
-
-server: $(OBJ)
-	$(CC) -o ../bin/$@ $^ $(CFLAGS)
+server: main.c
+	$(CC) $(CFLAGS) $^ -o $@ -I $(IDIR) $(LDFLAGS)
 
 .PHONY: clean
 
 clean:
-	rm -f $(ODIR)/*.o *~ core $(INCDIR)/*~
+	rm -f server
